# p2p_messenger

./: .gitignore  README.md
bins/messages/: jae.txt  nathan.txt
eval_scripts/: concurrent.py
messaging_client/: Cargo.toml
messaging_client/src/: handlers.rs  jae  lib.rs  main.rs  relics.rs  senders.rs  utils.rs
messaging_client/src/messages/: potato.txt  test.txt
messaging_client/src/network_messaging/: handlers.rs  mod.rs  senders.rs  utils.rs
messaging_server/: Cargo.toml
messaging_server/src/: handlers.rs  main.rs  utils.rs
