[package]
name = "messaging_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "handlers"
path = "src/handlers.rs"

[dependencies]
local-ip-address = "0.5.1"
mio = { version = "0.8.6", features = ["os-poll", "net"] }
threadpool = "1.8.1"
